--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       You can write text in a comment and the content won't be visible in the page
     -->
 
-    <title>Hello World!</title>
+    <title>scratch</title>
 
     <!-- Meta tags for SEO and social sharing -->
     <link rel="canonical" href="https://glitch-hello-website.glitch.me/" />
@@ -39,7 +39,7 @@
     <meta name="twitter:card" content="summary" />
 
     <!-- Import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <!-- Import the webpage's javascript file -->
     <script src="/script.js" defer></script>
@@ -57,23 +57,16 @@
     <div class="wrapper">
       <div class="content" role="main">
         <!-- This is the start of content for our page -->
-        <h1 class="title">Hello World!</h1>
+        <h1 class="title">Shooting  game</h1>
 
-        <img
-          src="https://cdn.glitch.com/a9975ea6-8949-4bab-addb-8a95021dc2da%2Fillustration.svg?v=1618177344016"
-          class="illustration"
-          alt="Editor illustration"
-          title="Click the image!"
-        />
+        <iframe src="https://scratch.mit.edu/projects/620623026/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
         <!-- Instructions on using this project -->
         <div class="instructions">
           <h2>
-            Using this project
+            How to play
           </h2>
           <p>
-            This is the Glitch <strong>Hello Website</strong> project. You can
-            use it to build your own site. Check out README.md in the editor for
-            more info and next steps you can take!
+            WASDキーで移動、↑キー押しっぱなしで攻撃、↓キーでライフを１消費してバリアを３スタック分張れます。バリア中は当たり判定が大きくなります。
           </p>
           <!-- ADD BUTTON HERE -->
           
